--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /chapter3_TransformerInPytorch/dataset/input.txt
 /chapter2_HuggingFace/tokenizer.json
 *.pt
+/chapter6_NLPTasks/dataset/**/*
+/chapter5_CreateLLM/pretrained_bert/**/*
+/chapter5_CreateLLM/*.csv
+/chapter4_TransferLearning/*.csv
