--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@
 /chapter4_TransferLearning/*.csv
 /chapter5_CreateLLM/pretrained_bert/**/*
 /chapter5_CreateLLM/*.csv
-/chapter6_NLPTasks/model/chatbot/*
-/chapter6_NLPTasks/dataset/*
+/chapter6_NLPTasks/model/chatbot
+/chapter6_NLPTasks/dataset
 
